<resources>
    <string name="app_name">rsauveho-SizeBook</string>
    <string name="add_record_label">rsauveho-SizeBook</string>
    <string name="action_edit">Edit Record</string>
    <string name="action_save">Save Record</string>
    <string name="action_delete">Delete Record</string>
    <string name="action_delete_all">Delete All Records</string>
    <string name="name">Name</string>
    <string name="date">Date (yyyy-mm-dd)</string>
    <string name="neck">Neck (in)</string>
    <string name="bust">Bust (in)</string>
    <string name="chest">Chest (in)</string>
    <string name="waist">Waist (in)</string>
    <string name="hip">Hip (in)</string>
    <string name="inseam">Inseam (in)</string>
    <string name="comment">Comment</string>
    <string name="save_button">Save Record</string>
    <string name="edit_button">Edit Record</string>
    <string name="counter_text">Number of Records: </string>
</resources>
