<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rfsh.rsauveho_sizebook.RecordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <DatePicker
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_height="138dp"
                android:layout_width="wrap_content">

            </DatePicker>

            <EditText
                android:hint="@string/neck"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/bust"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/chest"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/waist"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/hip"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/inseam"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:text="@string/save_button"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:width="@dimen/fab_margin"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
